// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses Comprehensive_Test_Procedure_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "Comprehensive_Test_Procedure_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
  ],
  "rootIds": [
    "Comprehensive_Test_Procedure_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses FORMAT_V_0-1-0_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "FORMAT_V_0-1-0_business",
      "markerKeys": [],
      "name": "FORMAT_V_0-1-0_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "FORMAT",
    },
  ],
  "rootIds": [
    "FORMAT_V_0-1-0_business",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses FORMAT_V_0-1-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "FORMAT_V_0-1-1_business",
      "markerKeys": [],
      "name": "FORMAT_V_0-1-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "FORMAT",
    },
  ],
  "rootIds": [
    "FORMAT_V_0-1-1_business",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses Ghostbusters_V_0-1-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 39,
  "nodes": [
    {
      "childCount": 38,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business",
      "markerKeys": [],
      "name": "Ghostbusters_V_0-1-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "Ghostbusters",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/City Official",
      "markerKeys": [],
      "name": "City Official",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Profiles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Clients will pay premium prices for containment services.",
      "markerKeys": [],
      "name": "Clients will pay premium prices for containment services.",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Commercial Properties",
      "markerKeys": [],
      "name": "Commercial Properties",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Segments",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Consultation & Training",
      "markerKeys": [],
      "name": "Consultation & Training",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Products and services",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Containment Unit Maintenance",
      "markerKeys": [],
      "name": "Containment Unit Maintenance",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Products and services",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Dana Barrett",
      "markerKeys": [],
      "name": "Dana Barrett",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Distressed Homeowner",
      "markerKeys": [],
      "name": "Distressed Homeowner",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Profiles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Emergency / Crisis Response",
      "markerKeys": [],
      "name": "Emergency / Crisis Response",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Segments",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Entity Containment",
      "markerKeys": [],
      "name": "Entity Containment",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Products and services",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/EPA (Walter Peck)",
      "markerKeys": [],
      "name": "EPA (Walter Peck)",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Fear and Emotional Trauma",
      "markerKeys": [
        "certainty",
        "weight",
      ],
      "name": "Fear and Emotional Trauma",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Ghostbusters Founders (Venkman, Stantz, Spengler)",
      "markerKeys": [],
      "name": "Ghostbusters Founders (Venkman, Stantz, Spengler)",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Government & Institutional",
      "markerKeys": [],
      "name": "Government & Institutional",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Segments",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Government Agencies",
      "markerKeys": [],
      "name": "Government Agencies",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Competition",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Gozer the Gozerian",
      "markerKeys": [],
      "name": "Gozer the Gozerian",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Guaranteed Entity Removal",
      "markerKeys": [
        "priority",
        "weight",
      ],
      "name": "Guaranteed Entity Removal",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Insurance Documentation",
      "markerKeys": [
        "weight",
      ],
      "name": "Insurance Documentation",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Janine Melnitz",
      "markerKeys": [],
      "name": "Janine Melnitz",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Lack of Alternatives",
      "markerKeys": [
        "certainty",
        "weight",
      ],
      "name": "Lack of Alternatives",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Liability Exposure",
      "markerKeys": [],
      "name": "Liability Exposure",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Risks",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Mayor of New York City",
      "markerKeys": [],
      "name": "Mayor of New York City",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Municipal governments will tolerate unlicensed paranormal operations.",
      "markerKeys": [],
      "name": "Municipal governments will tolerate unlicensed paranormal operations.",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Paranormal Infestation",
      "markerKeys": [
        "certainty",
        "weight",
      ],
      "name": "Paranormal Infestation",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Paranormal Investigation",
      "markerKeys": [],
      "name": "Paranormal Investigation",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Products and services",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Paranormal Investigators",
      "markerKeys": [],
      "name": "Paranormal Investigators",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Competition",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Paranormal threats are real and measurable.",
      "markerKeys": [],
      "name": "Paranormal threats are real and measurable.",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Property Manager",
      "markerKeys": [],
      "name": "Property Manager",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Profiles",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Property Value Impact",
      "markerKeys": [
        "certainty",
        "weight",
      ],
      "name": "Property Value Impact",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Proprietary Technology",
      "markerKeys": [
        "weight",
      ],
      "name": "Proprietary Technology",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Rapid Response",
      "markerKeys": [
        "weight",
      ],
      "name": "Rapid Response",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Regulatory Shutdown",
      "markerKeys": [],
      "name": "Regulatory Shutdown",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Risks",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Religious Institutions",
      "markerKeys": [],
      "name": "Religious Institutions",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Competition",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Reputation Crisis",
      "markerKeys": [],
      "name": "Reputation Crisis",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Risks",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Residential Hauntings",
      "markerKeys": [],
      "name": "Residential Hauntings",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Segments",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Technology Failure",
      "markerKeys": [],
      "name": "Technology Failure",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Risks",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/The containment unit will not reach critical mass.",
      "markerKeys": [],
      "name": "The containment unit will not reach critical mass.",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Traditional Exterminators",
      "markerKeys": [],
      "name": "Traditional Exterminators",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Competition",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Ghostbusters_V_0-1-1_business/Winston Zeddemore",
      "markerKeys": [],
      "name": "Winston Zeddemore",
      "parentId": "Ghostbusters_V_0-1-1_business",
      "storageMode": "FILE",
      "type": "Stakeholders",
    },
  ],
  "rootIds": [
    "Ghostbusters_V_0-1-1_business",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses Knowledge_Management_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "Knowledge_Management_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
  ],
  "rootIds": [
    "Knowledge_Management_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses Knowledge_Management_V_1-0-1_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "Knowledge_Management_V_1-0-1_procedures",
      "markerKeys": [],
      "name": "Knowledge_Management_V_1-0-1_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
  ],
  "rootIds": [
    "Knowledge_Management_V_1-0-1_procedures",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses iNNv0_Innovation_Process_V_1-0-0_procedures_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 1,
  "nodes": [
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "markerKeys": [],
      "name": "iNNv0_Innovation_Process_V_1-0-0_procedures",
      "parentId": null,
      "storageMode": "FILE",
      "type": "document",
    },
  ],
  "rootIds": [
    "iNNv0_Innovation_Process_V_1-0-0_procedures",
  ],
}
`;

exports[`recursiveParser golden: frozen models/* FILE fixtures > parses mini-file_V_0-0-1_business_FORMAT.md into a normalized graph snapshot 1`] = `
{
  "issueCount": 0,
  "nodeCount": 5,
  "nodes": [
    {
      "childCount": 4,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business",
      "markerKeys": [],
      "name": "mini-file_V_0-0-1_business",
      "parentId": null,
      "storageMode": "FILE",
      "type": "Mini File — FILE mode smoke test",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Assumption One",
      "markerKeys": [],
      "name": "Assumption One",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Assumptions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Core Value",
      "markerKeys": [],
      "name": "Core Value",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Value propositions",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Sample Problem",
      "markerKeys": [],
      "name": "Sample Problem",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
    {
      "childCount": 0,
      "fieldKeys": [],
      "id": "mini-file_V_0-0-1_business/Second Problem",
      "markerKeys": [],
      "name": "Second Problem",
      "parentId": "mini-file_V_0-0-1_business",
      "storageMode": "FILE",
      "type": "Problems",
    },
  ],
  "rootIds": [
    "mini-file_V_0-0-1_business",
  ],
}
`;
